# ZooHPC

./: README.md
MatMul/: CMakeLists.txt
MatMul/include/: common.h  rng.h
MatMul/src/: matmul.cpp  matmul.h
Softmax/src/: SoftmaxFloat32.cpp
Softmax/src/math/: KernelFunc.h  MathFloat32.h
ZooProjects/MatMul/: build.sh  main.cpp  run.sh
ZooProjects/MatMul/include/: utils.h
ZooProjects/Softmax/assembly/: ExpKernel.S
ZooProjects/Softmax/include/: MathFloat32.h  assembly.h
ZooProjects/Softmax/neon/: SoftmaxFloat32.cpp
